--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "deploy": "hardhat run scripts/deploy.js --network sepolia"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "chai": "^5.2.0",
     "dotenv": "^16.3.1",
-    "hardhat": "^2.22.19"
+    "ethers": "^6.13.5",
+    "hardhat": "^2.22.19",
+    "solidity-coverage": "^0.8.14"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0"
