final commit for the day - everything working and optimized

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ TREASURY_PRIVATE_KEY=0x47e179ec197488593b187f80a00eb0da91f1b9d0b13f8733639f19c30
 T3_CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
 SEPOLIA_RPC_URL=https://blockchain.googleapis.com/v1/projects/opengpt-383917/locations/us-central1/endpoints/ethereum-sepolia/rpc?key=AIzaSyBMWQpZtdLatyD3-iq64tmFaVKsiCT7v8Q
 RPC_URL=http://127.0.0.1:8545
+COINMARKETCAP_API_KEY=6df2feb8-15a4-4f95-ba95-bc6d8e074f41
+ETHERSCAN_API_KEY=NIH5F3BVMJCSUWB6DT6Q3T2299N3T9MQ7U
