--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typechain/hardhat": "^8.0.3",
     "@types/mocha": "^10.0.10",
     "chai": "^5.2.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "ethers": "^6.13.5",
     "hardhat": "^2.22.19",
