--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "node": "hardhat node"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.11",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.8",
+    "@nomicfoundation/ignition-core": "^0.15.11",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
-    "@types/chai": "^4.3.19",
+    "@types/chai": "^4.2.0",
     "@types/mocha": "^10.0.10",
-    "chai": "^5.2.0",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.5",
